add_library(nbt nbt)
add_library(tag tag)
add_library(colors colors)
add_library(image image)
add_library(assemble assemble)
add_library(settings settings)
target_link_libraries(nbt tag image settings ${Boost_LIBRARIES})
target_link_libraries(tag ${ZLIB_LIBRARY})
target_link_libraries(image colors)
target_link_libraries(assemble nbt ${PNG_LIBRARY} ${TBB_LIBRARY})

add_executable(nbtparse MACOSX_BUNDLE main)
add_executable(cart main_console)
target_link_libraries(nbtparse MainGUI)
target_link_libraries(cart assemble)

add_subdirectory(MainForm)
add_subdirectory(gtkmm)
